--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
 
+  <link rel="shortcut icon" href="./images/faviconx.ico" type="image/x-icon">
+
   <!-- Carousel -->
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css" />
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css" />
