--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
 
-  <link rel="shortcut icon" href="./images/faviconx.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/faviconx.ico" type="image/x-icon" />
 
   <!-- Carousel -->
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css" />
@@ -85,6 +85,7 @@
       </div>
     </div>
 
+    <!-- Hero -->
     <div class="hero">
       <div class="glide" id="glide_1">
         <div class="glide__track" data-glide-el="track">
@@ -114,9 +115,6 @@
               </div>
             </li>
           </ul>
-
-
-
         </div>
         <div class="glide__bullets" data-glide-el="controls[nav]">
           <button class="glide__bullet" data-glide-dir="=0"></button>
@@ -141,26 +139,23 @@
   <!-- End Header -->
 
   <!-- Main -->
+  <main id="main">
+    <!-- Collection -->
+    <section id="collection" class="section">
+      <div class="collection__container">
+        <div class="collection__box"></div>
+        <div class="collection__box"></div>
+      </div>
+    </section>
+  </main>
+
   <!-- End Main -->
 
   <!-- Footer -->
   <!-- End Footer -->
 
-  <!-- Glide Carousel -->
+  <!-- Glide Carousel Script -->
   <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
-
-  <script>
-    new Glide("#glide_1", {
-      type: "carousel",
-      startAt: 0,
-      autoplay: 4000,
-      hoverpause: true,
-      perView: 1,
-      transition: 900,
-      animationDuration: 600,
-      animationTimingFunc: 'linear',
-    }).mount();
-  </script>
 
   <!-- Custom JavaScript -->
   <script src="./js//app.js"></script>
