--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
 
-  <link rel="shortcut icon" href="./images/faviconx.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
 
   <!-- Carousel -->
   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css" />
@@ -143,9 +143,30 @@
     <!-- Collection -->
     <section id="collection" class="section">
       <div class="collection__container">
-        <div class="collection__box"></div>
-        <div class="collection__box"></div>
-      </div>
+        <div class="collection__box">
+          <div class="img__container">
+            <img class="collection_02" src="./images/collection_02.png" alt="">
+          </div>
+          <div class="collection__content">
+            <div class="collection__data">
+              <span>New Colors Introduced</span>
+              <h1>HEADPHONES</h1>
+              <a href="#">SHOP NOW</a>
+            </div>
+          </div>
+        </div>
+        <div class="collection__box">
+          <div class="img__container">
+            <img class="collection_01" src="./images/collection_01.png" alt="">
+          </div>
+          <div class="collection__content">
+            <div class="collection__data">
+              <span>Phone Device Presets</span>
+              <h1>SMARTPHONES</h1>
+              <a href="#">SHOP NOW</a>
+            </div>
+          </div>
+        </div>
     </section>
   </main>
 
