--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="hero__left">
                   <span class="">New Inspiration 2020</span>
                   <h1 class="">PHONES MADE FOR YOU!</h1>
-                  <a href="#">SHOP NOW</a>
+                  <a href="#"><button class="hero__btn">SHOP NOW</button></a>
                 </div>
                 <div class="hero__right">
                   <img class="banner_01" src="./images/banner_01.png" alt="banner2" />
@@ -107,7 +107,7 @@
                 <div class="hero__left">
                   <span>New Inspiration 2020</span>
                   <h1>PHONES MADE FOR YOU!</h1>
-                  <a href="#" class="hero__btn">SHOP NOW</a>
+                  <a href="#"><button class="hero__btn">SHOP NOW</button></a>
                 </div>
                 <div class="hero__right">
                   <img class="banner_02" src="./images/banner_02.png" alt="banner2" />
@@ -167,6 +167,314 @@
             </div>
           </div>
         </div>
+    </section>
+
+    <!-- Latest Products -->
+    <section class="section lastest__products">
+      <div class="container">
+        <div class="section__title active">
+          <span class="dot"></span>
+          <h1 class="primary__title">Latest Products</h1>
+        </div>
+        <div class="glide" id="glide_2">
+          <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/iPhone/iPhone1.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/headphone/headphone2.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/iPhone/iPhone3.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/headphone/headphone4.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/iPhone/iPhone4.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/headphone/headphone3.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/iPhone/iPhone5.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/iPhone/iPhone2.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="product">
+                  <div class="product__header">
+                    <a href="#"><img src="./images/products/headphone/headphone1.jpeg" alt="product"></a>
+                  </div>
+                  <div class="product__footer">
+                    <h3>Apple iPhone XR</h3>
+                    <div class="rating">
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                      </svg>
+                      <svg>
+                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                      </svg>
+                    </div>
+                    <div class="product__price">
+                      <span>$250</span>
+                    </div>
+                    <a href="#"><button type="submit" class="product__btn">Add To Cart</button></a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+
+          <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+              <svg>
+                <use xlink:href="./images/sprite.svg#icon-arrow-left2"></use>
+              </svg>
+            </button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+              <svg>
+                <use xlink:href="./images/sprite.svg#icon-arrow-right2"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
