--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                   <a href="#"><button class="hero__btn">SHOP NOW</button></a>
                 </div>
                 <div class="hero__right">
-                  <img class="banner_01" src="./images/banner_01.png" alt="banner2" />
+                  <div class="hero__img-container">
+                    <img class="banner_01" src="./images/banner_01.png" alt="banner2" />
+                  </div>
                 </div>
               </div>
             </li>
