--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@
     <!-- Latest Products -->
     <section class="section lastest__products">
       <div class="container">
-        <div class="section__title active">
-          <span class="dot"></span>
-          <h1 class="primary__title">Latest Products</h1>
+        <div class="title__container">
+          <div class="section__title">
+            <span class="dot"></span>
+            <h1 class="primary__title">Latest Products</h1>
+          </div>
         </div>
         <div class="glide" id="glide_2">
           <div class="glide__track" data-glide-el="track">
