--- a/product.html
+++ b/product.html
@@ -109,7 +109,7 @@
             <section class="section lastest__products">
                 <div class="title__container">
                     <div class="section__titles">
-                        <div class="section__title">
+                        <div class="section__title active">
                             <span class="dot"></span>
                             <h1 class="primary__title">Latest Products</h1>
                         </div>
