--- a/product.html
+++ b/product.html
@@ -105,6 +105,61 @@
 
     <main id="main">
         <div class="container">
+            <!-- Products Details -->
+            <section class="section product-details__section">
+                <div class="product-detail__container">
+                    <div class="product-detail__left">
+                        <div class="details__container--left">
+                            <div class="product__pictures">
+                                <div class="pictures__container">
+                                    <img src="./images/products/iPhone/iphone1.jpeg">
+                                </div>
+                                <div class="pictures__container">
+                                    <img src="./images/products/iPhone/iphone2.jpeg">
+                                </div>
+                                <div class="pictures__container">
+                                    <img src="./images/products/iPhone/iphone3.jpeg">
+                                </div>
+                                <div class="pictures__container">
+                                    <img src="./images/products/iPhone/iphone4.jpeg">
+                                </div>
+                                <div class="pictures__container">
+                                    <img src="./images/products/iPhone/iphone5.jpeg">
+                                </div>
+                            </div>
+                            <div class="product__picture" id="product__picture">
+                                <!-- <div class="rect" id="rect"></div> -->
+                                <div class="picture__container">
+                                    <img src="./images/products/iPhone/iphone1.jpeg" id="picture">
+                                </div>
+                            </div>
+                            <div class="zoom" id="zoom"></div>
+                        </div>
+
+                        <div class="product-details__btn">
+                            <a class="add" href="#">
+                                <span>
+                                    <svg>
+                                        <use xlink:href="./images/sprite.svg#icon-cart-plus"></use>
+                                    </svg>
+                                </span>
+                                ADD TO CART</a>
+                            <a class="buy" href="#">
+                                <span>
+                                    <svg>
+                                        <use xlink:href="./images/sprite.svg#icon-credit-card"></use>
+                                    </svg>
+                                </span>
+                                BUY NOW
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="product-detail__right">
+
+                    </div>
+                </div>
+            </section>
             <!-- Latest Products -->
             <section class="section lastest__products">
                 <div class="title__container">
