--- a/product.html
+++ b/product.html
@@ -160,8 +160,210 @@
                     </div>
                 </div>
             </section>
+
+
+            <!-- Related Products -->
+            <section class="section related__products">
+                <div class="title__container">
+                    <div class="section__titles">
+                        <div class="section__title active">
+                            <span class="dot"></span>
+                            <h1 class="primary__title">Related Products</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="glide" id="glide_3">
+                        <div class="glide__track" data-glide-el="track">
+                            <ul class="glide__slides">
+                                <li class="glide__slide">
+                                    <div class="product">
+                                        <div class="product__header">
+                                            <a href="#"><img src="./images/products/iPhone/iPhone1.jpeg"
+                                                    alt="product"></a>
+                                        </div>
+                                        <div class="product__footer">
+                                            <h3>Apple iPhone XR</h3>
+                                            <div class="rating">
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="product__price">
+                                                <span>$250</span>
+                                            </div>
+                                            <a href="#"><button type="submit" class="product__btn">Add To
+                                                    Cart</button></a>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="glide__slide">
+                                    <div class="product">
+                                        <div class="product__header">
+                                            <a href="#"><img src="./images/products/iPhone/iPhone3.jpeg"
+                                                    alt="product"></a>
+                                        </div>
+                                        <div class="product__footer">
+                                            <h3>Apple iPhone XR</h3>
+                                            <div class="rating">
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="product__price">
+                                                <span>$250</span>
+                                            </div>
+                                            <a href="#"><button type="submit" class="product__btn">Add To
+                                                    Cart</button></a>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="glide__slide">
+                                    <div class="product">
+                                        <div class="product__header">
+                                            <a href="#"><img src="./images/products/iPhone/iPhone4.jpeg"
+                                                    alt="product"></a>
+                                        </div>
+                                        <div class="product__footer">
+                                            <h3>Apple iPhone XR</h3>
+                                            <div class="rating">
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="product__price">
+                                                <span>$250</span>
+                                            </div>
+                                            <a href="#"><button type="submit" class="product__btn">Add To
+                                                    Cart</button></a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="product">
+                                        <div class="product__header">
+                                            <a href="#"><img src="./images/products/iPhone/iPhone5.jpeg"
+                                                    alt="product"></a>
+                                        </div>
+                                        <div class="product__footer">
+                                            <h3>Apple iPhone XR</h3>
+                                            <div class="rating">
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="product__price">
+                                                <span>$250</span>
+                                            </div>
+                                            <a href="#"><button type="submit" class="product__btn">Add To
+                                                    Cart</button></a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="glide__slide">
+                                    <div class="product">
+                                        <div class="product__header">
+                                            <a href="#"><img src="./images/products/iPhone/iPhone2.jpeg"
+                                                    alt="product"></a>
+                                        </div>
+                                        <div class="product__footer">
+                                            <h3>Apple iPhone XR</h3>
+                                            <div class="rating">
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                                </svg>
+                                                <svg>
+                                                    <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                                                </svg>
+                                            </div>
+                                            <div class="product__price">
+                                                <span>$250</span>
+                                            </div>
+                                            <a href="#"><button type="submit" class="product__btn">Add To
+                                                    Cart</button></a>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="glide__arrows" data-glide-el="controls">
+                            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+                                <svg>
+                                    <use xlink:href="./images/sprite.svg#icon-arrow-left2"></use>
+                                </svg>
+                            </button>
+                            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+                                <svg>
+                                    <use xlink:href="./images/sprite.svg#icon-arrow-right2"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- Latest Products -->
-            <section class="section lastest__products">
+            <section class="section latest__products">
                 <div class="title__container">
                     <div class="section__titles">
                         <div class="section__title active">
@@ -489,6 +691,7 @@
                     </div>
                 </div>
             </section>
+
         </div>
     </main>
 
