--- a/product.html
+++ b/product.html
@@ -156,7 +156,49 @@
                     </div>
 
                     <div class="product-detail__right">
-
+                        <div class="product-detail__content">
+                            <h3>Apple iPhone XR</h3>
+                            <div class="price">
+                                <span class="new__price">$250</span>
+                            </div>
+                            <div class="product__review">
+                                <div class="rating">
+                                    <svg>
+                                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                    </svg>
+                                    <svg>
+                                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                    </svg>
+                                    <svg>
+                                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                    </svg>
+                                    <svg>
+                                        <use xlink:href="./images/sprite.svg#icon-star-full"></use>
+                                    </svg>
+                                    <svg>
+                                        <use xlink:href="./images/sprite.svg#icon-star-empty"></use>
+                                    </svg>
+                                </div>
+                                <a href="#" class="rating__quatity">3 reviews</a>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt a doloribus iste natus et
+                                facere?
+                            </p>
+                            <ul class="product__info">
+                                <li>
+                                    <span>Brand:</span>
+                                    <a href="#">Apple</a>
+                                </li>
+                                <li>
+                                    <span>Availability:</span>
+                                    <a href="#">In Stock (7 Items)</a>
+                                </li>
+                                <li>
+                                    <span>Product Code:</span>
+                                    <a href="#">19</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
