--- a/product.html
+++ b/product.html
@@ -190,14 +190,58 @@
                                     <a href="#">Apple</a>
                                 </li>
                                 <li>
+                                    <span>Product Type:</span>
+                                    <a href="#">Phone</a>
+                                </li>
+                                <li>
                                     <span>Availability:</span>
                                     <a href="#">In Stock (7 Items)</a>
                                 </li>
-                                <li>
-                                    <span>Product Code:</span>
-                                    <a href="#">19</a>
-                                </li>
+
                             </ul>
+                            <div class="product__color">
+                                <h4>Color:</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#" class="color-black"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="color-blue"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="color-red"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="color-white"></a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="product-info__btn">
+                                <a href="#">
+                                    <span>
+                                        <svg>
+                                            <use xlink:href="./images/sprite.svg#"></use>
+                                        </svg>
+                                    </span>
+                                    SIZE GUIDE
+                                </a>
+                                <a href="#">
+                                    <span>
+                                        <svg>
+                                            <use xlink:href="./images/sprite.svg#"></use>
+                                        </svg>
+                                    </span>
+                                    SHIPPING
+                                </a>
+                                <a href="#">
+                                    <span>
+                                        <svg>
+                                            <use xlink:href="./images/sprite.svg#"></use>
+                                        </svg>
+                                    </span>
+                                    ASK ABOUT THIS PRODUCT
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
