--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <main id="main">
     <div class="container">
       <!-- Collection -->
-      <section id="collection" class="section">
+      <section id="collection" class="section collection">
         <div class="collection__container">
           <div class="collection__box">
             <div class="img__container">
@@ -173,7 +173,7 @@
       </section>
 
       <!-- Latest Products -->
-      <section class="section lastest__products">
+      <section class="section latest__products">
         <div class="title__container">
           <div class="section__title active">
             <span class="dot"></span>
@@ -481,7 +481,39 @@
           </div>
         </div>
       </section>
+
+      <section class="category__section section">
+        <div class="tab__list">
+          <div class="title__container tab">
+            <div class="section__titles">
+              <div class="section__title">
+                <span class="dot"></span>
+                <h1 class="primary__title">Trending Products</h1>
+              </div>
+            </div>
+
+            <div class="section__titles">
+              <div class="section__title">
+                <span class="dot"></span>
+                <h1 class="primary__title">Special Products</h1>
+              </div>
+            </div>
+
+            <div class="section__titles">
+              <div class="section__title">
+                <span class="dot"></span>
+                <h1 class="primary__title">Featured Products</h1>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+
     </div>
+
+
   </main>
 
   <!-- End Main -->
