--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="container">
           <div class="glide" id="glide_2">
             <div class="glide__track" data-glide-el="track">
-              <ul class="glide__slides">
+              <ul class="glide__slides products-center">
                 <li class="glide__slide">
                   <div class="product">
                     <div class="product__header">
@@ -486,26 +486,37 @@
         <div class="tab__list">
           <div class="title__container tab">
             <div class="section__titles">
-              <div class="section__title">
+              <div class="section__title filter-btn" data-id="all">
+                <span class="dot"></span>
+                <h1 class="primary__title">All Products</h1>
+              </div>
+            </div>
+            <div class="section__titles">
+              <div class="section__title filter-btn" data-id="trending">
                 <span class="dot"></span>
                 <h1 class="primary__title">Trending Products</h1>
               </div>
             </div>
 
             <div class="section__titles">
-              <div class="section__title">
+              <div class="section__title filter-btn" data-id="special">
                 <span class="dot"></span>
                 <h1 class="primary__title">Special Products</h1>
               </div>
             </div>
 
             <div class="section__titles">
-              <div class="section__title">
+              <div class="section__title filter-btn" data-id="featured">
                 <span class="dot"></span>
                 <h1 class="primary__title">Featured Products</h1>
               </div>
             </div>
 
+            <div class="category__container">
+              <div class="category__center">
+
+              </div>
+            </div>
 
           </div>
         </div>
