--- a/index.html
+++ b/index.html
@@ -506,17 +506,16 @@
             </div>
 
             <div class="section__titles">
-              <div class="section__title filter-btn" data-id="featured">
+              <div class="section__title filter-btn" data-id="feature">
                 <span class="dot"></span>
                 <h1 class="primary__title">Featured Products</h1>
               </div>
             </div>
 
-            <div class="category__container">
-              <div class="category__center">
-
-              </div>
-            </div>
+          </div>
+        </div>
+        <div class="category__container">
+          <div class="category__center">
 
           </div>
         </div>
