--- a/index.html
+++ b/index.html
@@ -484,29 +484,29 @@
 
       <section class="category__section section">
         <div class="tab__list">
-          <div class="title__container tab">
-            <div class="section__titles">
-              <div class="section__title filter-btn" data-id="all">
+          <div class="title__container tabs">
+            <div class="section__titles category__titles ">
+              <div class="section__title filter-btn active" data-id="all">
                 <span class="dot"></span>
                 <h1 class="primary__title">All Products</h1>
               </div>
             </div>
             <div class="section__titles">
-              <div class="section__title filter-btn" data-id="trending">
+              <div class="section__title filter-btn" data-id="Trending Products">
                 <span class="dot"></span>
                 <h1 class="primary__title">Trending Products</h1>
               </div>
             </div>
 
             <div class="section__titles">
-              <div class="section__title filter-btn" data-id="special">
+              <div class="section__title filter-btn" data-id="Special Products">
                 <span class="dot"></span>
                 <h1 class="primary__title">Special Products</h1>
               </div>
             </div>
 
             <div class="section__titles">
-              <div class="section__title filter-btn" data-id="feature">
+              <div class="section__title filter-btn" data-id="Featured Products">
                 <span class="dot"></span>
                 <h1 class="primary__title">Featured Products</h1>
               </div>
@@ -515,11 +515,10 @@
           </div>
         </div>
         <div class="category__container">
-          <div class="category__center">
-
-          </div>
+          <div class="category__center"></div>
         </div>
-      </section>
+    </div>
+    </section>
 
     </div>
 
