--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         <div class="tab__list">
           <div class="title__container tabs">
             <div class="section__titles category__titles ">
-              <div class="section__title filter-btn active" data-id="all">
+              <div class="section__title filter-btn active" data-id="All Products">
                 <span class="dot"></span>
                 <h1 class="primary__title">All Products</h1>
               </div>
@@ -532,6 +532,9 @@
 
   <!-- Glide Carousel Script -->
   <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
+
+  <!-- Isotope Filtering -->
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
 
   <!-- Custom JavaScript -->
   <script src="./js//app.js"></script>
