--- a/index.html
+++ b/index.html
@@ -547,7 +547,122 @@
     </div>
     </section>
 
+    <!-- Facility Section -->
+    <section class="facility__section section">
+      <div class="container">
+        <div class="facility__contianer">
+          <div class="facility__box">
+            <div class="facility-img__container">
+              <svg>
+                <use xlink:href="./images/sprite.svg#icon-airplane"></use>
+              </svg>
+            </div>
+            <p>FREE SHIPPING WORLD WIDE</p>
+          </div>
+
+          <div class="facility__box">
+            <div class="facility-img__container">
+              <svg>
+                <use xlink:href="./images/sprite.svg#icon-credit-card-alt"></use>
+              </svg>
+            </div>
+            <p>100% MONEY BACK GUARANTEE</p>
+          </div>
+
+          <div class="facility__box">
+            <div class="facility-img__container">
+              <svg>
+                <use xlink:href="./images/sprite.svg#icon-credit-card"></use>
+              </svg>
+            </div>
+            <p>MANY PAYMENT GATWAYS</p>
+          </div>
+
+          <div class="facility__box">
+            <div class="facility-img__container">
+              <svg>
+                <use xlink:href="./images/sprite.svg#icon-headphones"></use>
+              </svg>
+            </div>
+            <p>24/7 ONLINE SUPPORT</p>
+          </div>
+        </div>
+      </div>
+    </section>
     </div>
+    <!-- Testimonial Section -->
+    <section class="section testimonial">
+      <div class="testimonial__container">
+        <div class="glide" id="glide_4">
+          <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+              <li class="glide__slide">
+                <div class="testimonial__box">
+                  <div class="client__image">
+                    <img src="" alt="">
+                  </div>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                    quibusdam consequatur eligendi unde officia ex quae.</p>
+                  <div class="client__info">
+                    <h3>John Smith</h3>
+                    <span>Founder at Apple</span>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="testimonial__box">
+                  <div class="client__image">
+                    <img src="" alt="">
+                  </div>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                    quibusdam consequatur
+                    eligendi unde officia ex quae.</p>
+                  <div class="client__info">
+                    <h3>John Smith</h3>
+                    <span>Founder at Apple</span>
+                  </div>
+                </div>
+              </li>
+              <li class="glide__slide">
+                <div class="testimonial__box">
+                  <div class="client__image">
+                    <img src="" alt="">
+                  </div>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                    quibusdam consequatur
+                    eligendi unde officia ex quae.</p>
+                  <div class="client__info">
+                    <h3>John Smith</h3>
+                    <span>Founder at Apple</span>
+                  </div>
+                </div>
+
+              </li>
+              <li class="glide__slide">
+                <div class="testimonial__box">
+                  <div class="client__image">
+                    <img src="" alt="">
+                  </div>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                    quibusdam consequatur
+                    eligendi unde officia ex quae.</p>
+                  <div class="client__info">
+                    <h3>John Smith</h3>
+                    <span>Founder at Apple</span>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+
+          <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
   </main>
@@ -564,7 +679,7 @@
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
 
   <!-- Custom JavaScript -->
-  <script src="./js//app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
