--- a/index.html
+++ b/index.html
@@ -599,9 +599,11 @@
               <li class="glide__slide">
                 <div class="testimonial__box">
                   <div class="client__image">
-                    <img src="" alt="">
+                    <img src="./images/profile1.jpg" alt="profile">
                   </div>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
+                    quibusdam consequatur eligendi unde officia ex quae.ipsum dolor sit amet consectetur adipisicing
+                    elit. Recusandae fuga hic nesciunt tempore
                     quibusdam consequatur eligendi unde officia ex quae.</p>
                   <div class="client__info">
                     <h3>John Smith</h3>
@@ -612,11 +614,15 @@
               <li class="glide__slide">
                 <div class="testimonial__box">
                   <div class="client__image">
-                    <img src="" alt="">
+                    <img src="./images/profile2.jpg" alt="profile">
                   </div>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
                     quibusdam consequatur
-                    eligendi unde officia ex quae.</p>
+                    eligendi unde officia ex quae.ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic
+                    nesciunt tempore
+                    quibusdam consequatur eligendi unde officia ex quae.adipisicing elit. Recusandae fuga hic
+                    nesciunt tempore
+                    quibusdam consequatur eligendi unde officia ex quae.</p>
                   <div class="client__info">
                     <h3>John Smith</h3>
                     <span>Founder at Apple</span>
@@ -626,11 +632,15 @@
               <li class="glide__slide">
                 <div class="testimonial__box">
                   <div class="client__image">
-                    <img src="" alt="">
+                    <img src="./images/profile3.jpg" alt="profile">
                   </div>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
                     quibusdam consequatur
-                    eligendi unde officia ex quae.</p>
+                    eligendi unde officia ex quae.ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic
+                    nesciunt tempore
+                    quibusdam consequatur eligendi unde officia ex quae.adipisicing elit. Recusandae fuga hic
+                    nesciunt tempore
+                    quibusdam consequatur eligendi unde officia ex quae.</p>
                   <div class="client__info">
                     <h3>John Smith</h3>
                     <span>Founder at Apple</span>
@@ -641,11 +651,16 @@
               <li class="glide__slide">
                 <div class="testimonial__box">
                   <div class="client__image">
-                    <img src="" alt="">
+                    <img src="./images/profile4.jpg" alt="">
                   </div>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae fuga hic nesciunt tempore
                     quibusdam consequatur
-                    eligendi unde officia ex quae.</p>
+                    eligendi unde officia ex quae.adipisicing elit. Recusandae fuga hic
+                    nesciunt tempore
+                    quibusdam consequatur eligendi unde officia ex quae.
+                    hic
+                    nesciunt tempore
+                    quibusdam consequatur eligendi unde officia ex quae.</p>
                   <div class="client__info">
                     <h3>John Smith</h3>
                     <span>Founder at Apple</span>
@@ -659,6 +674,7 @@
             <button class="glide__bullet" data-glide-dir="=0"></button>
             <button class="glide__bullet" data-glide-dir="=1"></button>
             <button class="glide__bullet" data-glide-dir="=2"></button>
+            <button class="glide__bullet" data-glide-dir="=3"></button>
           </div>
         </div>
       </div>
